k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: m-farm-frontend
  namespace: default
spec:
  selector:
    app: m-farm-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
