k8s-manifests/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: m-farm-product-service
  namespace: default
spec:
  selector:
    app: m-farm-product-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
