k8s-manifests/user-service-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: m-farm-user-service
  namespace: default
spec:
  selector:
    app: m-farm-user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
